--- a/src/main/resources/com/example/furniture/components/Layout.tml
+++ b/src/main/resources/com/example/furniture/components/Layout.tml
@@ -50,7 +50,7 @@
         <t:body />
         <hr />
         <footer>
-            <p>&copy; Your Company ${year}</p>
+            <p>&copy; Furniture factory ${year}</p>
         </footer>
     </div>
 </div>
